--- a/templates/edit copy.html
+++ b/templates/edit copy.html
@@ -48,34 +48,6 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
             /* Optional: Add shadow effect */
         }
-
-        /* fayas */
-        .hidden-checkbox {
-            display: none;
-        }
-
-        .custom-checkbox {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
-            text-align: center;
-            border-radius: 3px;
-            background-color: #ccc;
-            color: #fff;
-            cursor: pointer;
-            user-select: none;
-            font-weight: bold;
-        }
-
-        .custom-checkbox:hover {
-            background-color: #7c7a7a;
-        }
-
-        .hidden-checkbox:checked+.custom-checkbox {
-            background-color: #00ff00;
-            color: #000;
-        }
     </style>
 
 </head>
@@ -388,30 +360,33 @@
                                         <div class="row">
                                             <div class="form-group">
                                                 <label>Update Images</label>
-                                                <div id="existingImages" class="image-grid d-flex flex-wrap">
+                                                <div id="existingImages" class="image-grid d-flex">
                                                     {{ if .Car.Images }}
                                                     {{ range .Car.Images }}
-                                                    <div class="existing-image-container m-2" id="container_{{ .ID }}">
-                                                        <input type="checkbox" id="delete_image_{{ .ID }}" name="delete_images" value="{{ .ID }}" onchange="toggleImageVisibility('{{ .ID }}')" class="hidden-checkbox" />
-                                                        <div class="w-full d-flex justify-content-end">
-                                                            <label for="delete_image_{{ .ID }}" class="custom-checkbox ">x</label>
-                                                        </div>
-                                                
-                                                        <div class="d-flex justify-content-center align-items-center position-relative" style="width: 100px; height: 100px;">
-                                                            <img style="width: 100%; height: 100%;" src="{{ .Path }}" class="existing-image" alt="Existing Image" id="image_{{ .ID }}" />
-                                                            <label for="replace_image_{{ .ID }}" class="position-absolute center-icon btn btn-outline-dark btn-sm">
-                                                                <i class="fa fa-plus" aria-hidden="true" style="cursor: pointer;"></i>
-                                                            </label>
-                                                        </div>
-                                                        
-                                                        <input type="file" id="replace_image_{{ .ID }}" name="replace_image_{{ .ID }}" class="form-control-file image-input" accept="image/*" style="display:none;" onchange="replaceImage('{{ .ID }}', event)" />
+                                                    <div class="existing-image-container" id="container_{{ .ID }}">
+                                                        <input type="checkbox" name="delete_images" value="{{ .ID }}"
+                                                            onchange="toggleImageVisibility('{{ .ID }}')" />
+                                                        <br>
+                                                        <img style="width: 50px; height: auto;" src="{{ .Path }}"
+                                                            class="existing-image" alt="Existing Image"
+                                                            id="image_{{ .ID }}" />
+                                                        <br>
+                                                        <br>
+                                                        <label for="replace_image_{{ .ID }}">
+                                                            <i class="fa fa-plus" aria-hidden="true"
+                                                                style="cursor: pointer;"></i>
+                                                        </label>
+                                                        <input type="file" id="replace_image_{{ .ID }}"
+                                                            name="replace_image_{{ .ID }}"
+                                                            class="form-control-file image-input" accept="image/*"
+                                                            style="display:none;"
+                                                            onchange="replaceImage('{{ .ID }}', event)" />
                                                     </div>
                                                     {{ end }}
                                                     {{ else }}
                                                     <p>No images available.</p>
                                                     {{ end }}
                                                 </div>
-                                                
                                             </div>
                                         </div>
 
