--- a/templates/admin.html
+++ b/templates/admin.html
@@ -202,6 +202,17 @@
                 </div>
             </a>
 
+            <a class="sidebar-brand d-flex align-items-center justify-content-around w-full"
+   href="/admin/get_uploads_page">
+    <div style="font-size: 1rem;" class="font-weight-normal">
+        <i class="fa fa-upload" aria-hidden="true"></i>
+    </div>
+    <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light">
+        <small>Uploads</small> <sup></sup>
+    </div>
+</a>
+            
+
 
 
             <br>
