--- a/templates/admin.html
+++ b/templates/admin.html
@@ -180,6 +180,18 @@
                     <small>Dashboard</small> <sup></sup>
                 </div>
             </a>
+            <a class="sidebar-brand d-flex align-items-center justify-content-around w-full"
+            href="/admin/get_brand_page">
+            <div style="font-size: 1rem;" class=" font-weight-normal">
+                <i class="fa fa-bold" aria-hidden="true"></i>
+
+            </div>
+            <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light ">
+                <small>Brands</small> <sup></sup>
+            </div>
+        </a>
+
+
 
             <a class="sidebar-brand d-flex align-items-center justify-content-around w-full"
                 href="/admin/get_youtube_link_form">
@@ -191,27 +203,16 @@
                 </div>
             </a>
 
-            <a class="sidebar-brand d-flex align-items-center justify-content-around w-full"
-                href="/admin/get_brand_page">
-                <div style="font-size: 1rem;" class=" font-weight-normal">
-                    <i class="fa fa-bold" aria-hidden="true"></i>
+        
 
+            <a class="sidebar-brand d-flex align-items-center justify-content-around w-full" href="/admin/get_uploads_page">
+                <div style="font-size: 1rem;" class="font-weight-normal">
+                    <i class="fa fa-truck" aria-hidden="true"></i>
                 </div>
-                <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light ">
-                    <small>Brands</small> <sup></sup>
+                <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light">
+                    <small>Delivery</small> <sup></sup>
                 </div>
             </a>
-
-            <a class="sidebar-brand d-flex align-items-center justify-content-around w-full"
-   href="/admin/get_uploads_page">
-    <div style="font-size: 1rem;" class="font-weight-normal">
-        <i class="fa fa-upload" aria-hidden="true"></i>
-    </div>
-    <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light">
-        <small>Uploads</small> <sup></sup>
-    </div>
-</a>
-            
 
 
 
