--- a/templates/admin.html
+++ b/templates/admin.html
@@ -513,8 +513,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <label>Car Type</label>
-                                                        <select name="car_type" id="carType" class="form-control"
-                                                            required>
+                                                        <select name="car_type" id="carType" class="form-control" required>
                                                             {{range .CarTypes}}
                                                             <option value="{{.}}">{{.}}</option>
                                                             {{end}}
