--- a/templates/edit.html
+++ b/templates/edit.html
@@ -256,7 +256,7 @@
                                             <div class="col-lg-4">
                                                 <div class="form-group">
                                                     <label for="inputZip">Color</label>
-                                                    <input type="text" name="color" value="{{.Car.Year}}"
+                                                    <input type="text" name="color" value="{{.Car.Color}}"
                                                         class="form-control" id="inputZip" />
                                                 </div>
                                             </div>
